--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -9,6 +9,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="50dp"
+        android:background="@color/colorAccent"
         android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
